tests/casting_syntax_as/casting_syntax_as.exp
Error ----------------------------------------------------------------------------------------------------- test.js:12:3

Cannot cast `x` to boolean because number [1] is incompatible with boolean [2]. [incompatible-cast]

   test.js:12:3
   12|   x as boolean; // ERROR
         ^

References:
   test.js:11:13
   11|   const x = 1;
                   ^ [1]
   test.js:12:8
   12|   x as boolean; // ERROR
              ^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:18:3

Invalid type cast syntax. Use the form `<expr> as <type>` instead of the form `(<expr>: <type>)`.
[invalid-type-cast-syntax]

   18|   (x: number); // ERROR
         ^^^^^^^^^^^



Found 2 errors
